fixed project links with z-index

--- a/style/style.css
+++ b/style/style.css
@@ -56,6 +56,7 @@ header {
     width: 60%;
     padding-right: 20px;
     margin-bottom: 40px;
+    z-index: 20;
 }
 
 .page-content {
@@ -77,6 +78,7 @@ header {
 
 .project-description{
   position: relative;
+  z-index: -10;
 }
 
 .project {
@@ -90,14 +92,14 @@ header {
 textarea {
   width: 80%;
   border: none;
-  background: rgba(0, 0, 0, .2);
+  background: rgba(0, 0, 0, .3);
   border-radius: 8px;
 }
 
 input {
   width: 80%;
   border: none;
-  background: rgba(0, 0, 0, .2);
+  background: rgba(0, 0, 0, .3);
   border-radius: 8px;
 }
 
@@ -105,12 +107,14 @@ input {
   margin-left: 15px;
   padding: 8px;
   border: none;
-  background: rgba(0, 0, 0, .2);
+  background: rgba(0, 0, 0, .3);
   border-radius: 8px;
 }
 
 #resumeImg {
   width: 100%;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 /* Footer */
@@ -135,4 +139,5 @@ input {
   width: 50px;
   padding: 5px;
   opacity: 0.7;
+  z-index: 10;
 }
